--- a/02/tutorial/examples/02_displayingTheCanvas.html
+++ b/02/tutorial/examples/02_displayingTheCanvas.html
@@ -32,6 +32,8 @@
     // render.view 는 일반적인 <canvas> 요소입니다
     // 다음은 선택적 대시를 추가하기 위해 참조 할 수 있는 방법입니다.
     // border around the canvas 
+    console.log(app.renderer.view)
+    console.log(app.renderer)
     app.renderer.view.style.border = "1px dashed black";
 
     //To resize the canvas
